--- a/res/layout/loadinglistentry.xml
+++ b/res/layout/loadinglistentry.xml
@@ -2,20 +2,18 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="wrap_content">
+  android:layout_height="wrap_content"
+  android:gravity="center">
 <ProgressBar android:layout_width="50px" android:layout_height="50px" android:id="@+id/loading_circle" android:indeterminate="true"></ProgressBar>
 <TextView 
 		android:id="@+id/loading_text" 
 		android:layout_height="50px" 
 		android:layout_width="fill_parent" 
 		android:text="Title" 
-		android:textSize="18px" 
-		android:textColor="@drawable/listitem_title" 
+		android:textSize="18sp" 
 		android:ellipsize="end" 
 		android:marqueeRepeatLimit="1" 
 		android:lines="1" 
 		android:scrollHorizontally="true" 
-		android:paddingLeft="5px" 
-		android:paddingTop="14px"
-		android:background="@drawable/listitem_bg" />
+		android:paddingTop="14px" />
 </LinearLayout>
