--- a/res/layout/albumgrid.xml
+++ b/res/layout/albumgrid.xml
@@ -2,8 +2,11 @@
 <GridView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:id="@+id/albumgrid_grid"
     android:layout_height="fill_parent"
-    android:verticalSpacing="0dp"
-    android:horizontalSpacing="0dp"
-    android:stretchMode="columnWidth"
+    android:verticalSpacing="1dp"
+    android:horizontalSpacing="1dp"
     android:gravity="center"
-android:numColumns="3" android:isScrollContainer="true" android:layout_width="wrap_content" android:columnWidth="100dip"/>
+    android:numColumns="auto_fit"
+	android:isScrollContainer="true"
+	android:layout_width="fill_parent"
+	android:columnWidth="96dp"
+	android:stretchMode="columnWidth"/>
