--- a/res/layout/musicgenre.xml
+++ b/res/layout/musicgenre.xml
@@ -20,8 +20,8 @@
             android:layout_height="fill_parent"
             android:layout_above="@id/slidingtabs">
             
-			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="fill_parent" android:layout_height="fill_parent"
+			<LinearLayout
+			    android:layout_width="fill_parent" android:layout_height="fill_parent"
 				android:id="@+id/artistlist_outer_layout" android:orientation="vertical"
 				android:fadingEdge="none">
 				<include layout="@layout/listmessage" />
@@ -36,7 +36,7 @@
 				</org.xbmc.android.widget.FastScrollView>
 			</LinearLayout>
 
-			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			<LinearLayout
 				android:layout_width="fill_parent" android:layout_height="fill_parent"
 				android:id="@+id/albumlist_outer_layout" android:orientation="vertical"
 				android:fadingEdge="none">
@@ -52,7 +52,7 @@
 				</org.xbmc.android.widget.FastScrollView>
 			</LinearLayout>
 
-			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			<LinearLayout
 				android:layout_width="fill_parent" android:layout_height="fill_parent"
 				android:id="@+id/songlist_outer_layout" android:orientation="vertical"
 				android:fadingEdge="none">
